syntax = "proto3";

package wgcni.wireguard.v1;

option go_package = "github.com/clly/wireguard-cni/gen/wgcni/wireguard/v1;wireguardv1";

service WireguardService {
  // Register will register a wireguard peer
  rpc Register(RegisterRequest) returns (RegisterResponse) {}

  // Peers rpc will return a list of all wireguard peers
  rpc Peers(PeersRequest) returns (PeersResponse) {}
}

message RegisterRequest {
  // public_key is the wireguard public key
  string public_key = 1;
  // endpoint is the address:port clients should dial to connect to this wireguard peer
  string endpoint = 2;
  // route is the addresses that can be found on this endpoint
  string route = 3;
  // namespace is the path to the network namespace that this peer belongs to
  string namespace = 4;
}

message RegisterResponse {}

message PeersRequest {}

message PeersResponse {
  repeated Peer peers = 1;
}

message Peer {
  string public_key = 1;
  string endpoint = 2;
  string route = 3;
}
